testsuite/tests/checks/positional_parameters/test.out
pos.adb:33:10: error: positional parameter association
33 |    T.E1 (10, 11);                       --  FLAG twice
   |          ^^ 

pos.adb:33:14: error: positional parameter association
33 |    T.E1 (10, 11);                       --  FLAG twice
   |              ^^ 

pos.adb:37:15: error: positional parameter association
37 |    I := Fun2 (J, K);                    --  FLAG twice
   |               ^ 

pos.adb:37:18: error: positional parameter association
37 |    I := Fun2 (J, K);                    --  FLAG twice
   |                  ^ 

pos.adb:38:23: error: positional parameter association
38 |    I := Fun2_Default (J);               --  FLAG
   |                       ^ 

pos.adb:43:11: error: positional parameter association
43 |    Proc2 (I);                           --  FLAG
   |           ^ 

pos.adb:52:19: error: positional parameter association
52 |    Var_T.T_Proc3 (10);                  --  FLAG
   |                   ^^ 

